--- a/StudyProject/Views/Admin/UserManagement.cshtml
+++ b/StudyProject/Views/Admin/UserManagement.cshtml
@@ -39,7 +39,7 @@
                             Роль
                         </th>
                         <th>
-                            Дата створення
+                            Дата реєстрації
                         </th>
                         <th>Змінити роль</th>
                         <th></th>
