--- a/StudyProject/Views/Tutor/Groups.cshtml
+++ b/StudyProject/Views/Tutor/Groups.cshtml
@@ -44,7 +44,7 @@
                                 Назва
                             </th>
                             <th>
-                                Додати групу
+                                Дата створення
                             </th>
                             <th>Редагувати</th>
                             <th>Заняття</th>
