--- a/StudyProject/Views/Tutor/SelectTest.cshtml
+++ b/StudyProject/Views/Tutor/SelectTest.cshtml
@@ -1,4 +1,6 @@
 ﻿@model List<tbTest>
+@using StudyProject.Models.Core
+
 
 @using StudyProject;
 @using StudyProject.Models
@@ -27,7 +29,7 @@
                                     <ul class="nav flex-column">
                                         <li class="nav-item">
                                             <a href="#" class="nav-link">
-                                                Кількість завдань: <span class="float-right badge bg-gradient-info">@test.tbTask.Where(w => w.tbTaskVariant.Any()).Count()</span>
+                                                Кількість завдань: <span class="float-right badge bg-gradient-info">@test.tbTask.Where(w => w.tbTaskVariant.Any() || (w.Type == (int)TaskStuff.TaskType.Input && w.isManual)).Count()</span>
                                             </a>
                                         </li>
                                         <li class="nav-item">
