--- a/StudyProject/Views/Tutor/TutorMaterials.cshtml
+++ b/StudyProject/Views/Tutor/TutorMaterials.cshtml
@@ -76,6 +76,13 @@
                             <label class="control-label col-md-2">Текст</label>
                             <textarea class="form-control" id="text" name="Text" rows="3"></textarea>
                         </div>
+                        <div class="form-group">
+                            <label class="control-label col-12">Показувати користувачу?</label>
+                            <div class="col-12">
+                                <div><input type="radio" name="ShowMaterial" value="true" class="ml-3" /> Так</div>
+                                <div><input type="radio" name="ShowMaterial" value="false" class="ml-3" /> Ні</div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="modal-footer">
@@ -111,6 +118,13 @@
                         <div class="form-group">
                             <label class="control-label col-md-2">Текст</label>
                             <textarea class="form-control" id="text2" name="Text" rows="3"></textarea>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-12">Показувати користувачу?</label>
+                            <div class="col-12">
+                                <div><input type="radio" name="ShowMaterial" value="true" class="ml-3" /> Так</div>
+                                <div><input type="radio" name="ShowMaterial" value="false" class="ml-3" /> Ні</div>
+                            </div>
                         </div>
                     </div>
                 </div>
