--- a/StudyProject/Views/Shared/_MainLayout.cshtml
+++ b/StudyProject/Views/Shared/_MainLayout.cshtml
@@ -56,7 +56,7 @@
             <div class="sidebar">
                 <div class="user-panel mt-3 pb-3 mb-3 d-flex">
                     <div class="image">
-                        <img src="~/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
+                        <img src="~/dist/img/user_anonim.png" class="img-circle elevation-2" alt="User Image">
                     </div>
                     <div class="info">
                         <a href="#" class="d-block">@uInfo.fuser.LastName @uInfo.fuser.FirstName</a>
@@ -106,7 +106,7 @@
                                         </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="pages/UI/ribbons.html" class="nav-link">
+                                        <a href="@Url.Action("Materials","Home")" class="nav-link">
                                             <i class="far fa-circle nav-icon"></i>
                                             <p>Матеріали</p>
                                         </a>
